--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>portfolio</title>
   <link rel="stylesheet" href="css/styles.css" />
   <link
@@ -19,7 +19,7 @@
         <ul class="menu" id="menu">
           <li><a href="#" class="active">Inicio</a></li>
           <li><a href="#sobre">Sobre mi</a></li>
-          <li><a href="#portafolio">Portafolio</a></li>
+          <li><a href="#portafolio">Portfolio</a></li>
           <li><a href="#contacto">Contacto</a></li>
         </ul>
         <div class="toggle_menu">
@@ -34,13 +34,12 @@
         <h1>Soy <span>Carlos</span></h1>
 
         <p class="info_content_p">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt
-          facilis minima eveniet accusamus rem sint doloribus quia eligendi
-          expedita optio, dolore quo ipsa atque. Expedita doloremque deleniti
-          alias iste quia?
+          ¡Hola! Soy Carlos Coronado, soy desarrollador frontend. Mi objetivo es
+          crear experiencias web cautivadoras y funcionales. ¡Explora mi trabajo
+          y descubre el mundo de la programación a través de mis ojos!
         </p>
       </div>
-      <img src="/img/siuuu-removebg-preview (1).png" alt="" />
+      <img src="/img/pruebaimagen-removebg-preview.png" alt="" />
     </main>
   </div>
   <div id="sobre" class="about">
@@ -52,22 +51,21 @@
       <h2>Sobre mi</h2>
       <div class="divider"></div>
       <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores id
-        cumque asperiores fugit, quis repudiandae accusamus quisquam modi
-        numquam laudantium fugiat enim eum pariatur amet illum recusandae
-        debitis reprehenderit sed?
+        En mi día a día, encuentro inspiración en la diversidad que nos rodea.
+        Fuera de las líneas de código, disfruto explorando nuevas formas de
+        expresión creativa. 
       </p>
       <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores id
-        cumque asperiores fugit, quis repudiandae accusamus quisquam modi
-        numquam laudantium fugiat enim eum pariatur amet illum recusandae
-        debitis reprehenderit sed?
+        Siempre en busca de experiencias auténticas, me
+        gusta descubrir cómo la tecnología puede mejorar y enriquecer nuestras
+        vidas. Bienvenido a mi espacio digital, donde la creatividad se
+        encuentra con la simplicidad.
       </p>
     </div>
   </div>
   <div class="portfolio">
     <div id="portafolio" class="portfolio-heading">
-      <h2>Portafolio</h2>
+      <h2>Portfolio</h2>
       <div class="divider"></div>
     </div>
     <!-- ajustar -->
@@ -75,19 +73,20 @@
       <div class="card">
         <div class="rym"></div>
         <div class="card__title">
-          <h2>Rick and Morty</h2>
+          <!-- <h2>Rick and Morty</h2> -->
+          <h4>Locacion de diferentes dimensiones por su respectivo Id</h4>
         </div>
         <div class="card__proyect-links">
-          <a
-            href="https://github.com/cocarls/rick-and-morty-week3"
-            target="_blank"
-          >
+          <a href="https://github.com/cocarls" target="_blank">
             <i class="fab fa-github"></i>
           </a>
           <a href="">
             <i class="fas fa-globe-asia"></i>
           </a>
-          <a href="">
+          <a
+            href="https://github.com/cocarls/rick-and-morty-week3"
+            target="_blank"
+          >
             <i class="fas fa-code"></i>
           </a>
         </div>
@@ -96,7 +95,7 @@
             <a
               href="https://heartfelt-marshmallow-01d93e.netlify.app/"
               target="_blank"
-              >Project Details</a
+              >Ver proyecto</a
             >
           </button>
         </div>
@@ -104,16 +103,17 @@
       <div class="card">
         <div class="fp"></div>
         <div class="card__title">
-          <h2>Pokemon</h2>
+          <!-- <h2>Pokemon</h2> -->
+          <h4>filtrado de pokemons por su tipo y su respectiva descripcion</h4>
         </div>
         <div class="card__proyect-links">
-          <a href="https://github.com/cocarls/pokedex" target="_blank">
+          <a href="https://github.com/cocarls" target="_blank">
             <i class="fab fa-github"></i>
           </a>
           <a href="">
             <i class="fas fa-globe-asia"></i>
           </a>
-          <a href="">
+          <a href="https://github.com/cocarls/pokedex" target="_blank">
             <i class="fas fa-code"></i>
           </a>
         </div>
@@ -122,7 +122,7 @@
             <a
               href="https://beautiful-cactus-666cf8.netlify.app/"
               target="_blank"
-              >Project Details</a
+              >Ver proyecto</a
             >
           </button>
         </div>
@@ -130,44 +130,59 @@
       <div class="card">
         <div class="fd"></div>
         <div class="card__title">
-          <h2>clima</h2>
+          <!-- <h2>clima</h2> -->
+          <h4>
+            ver el clima de manera local mas un icono referente a dicho clima
+          </h4>
         </div>
         <div class="card__proyect-links">
-          <a href="https://github.com/cocarls/climate-week2" target="_blank">
+          <a href="https://github.com/cocarls" target="_blank">
             <i class="fab fa-github"></i>
           </a>
           <a href="">
             <i class="fas fa-globe-asia"></i>
           </a>
-          <a href="">
+          <a href="https://github.com/cocarls/climate-week2" target="_blank">
             <i class="fas fa-code"></i>
           </a>
         </div>
         <div class="button-content">
           <button class="project-details-button download-cv">
-            <a href="#">Project Details</a>
+            <a
+              href="https://fastidious-pithivier-89b272.netlify.app/"
+              target="_blank"
+              >Ver proyecto</a
+            >
           </button>
         </div>
       </div>
       <div class="card">
         <div class="js"></div>
         <div class="card__title">
-          <h2>preguntas js</h2>
+          <!-- <h2>preguntas js</h2> -->
+          <h4>
+            preguntas aleatorias y un contador de preguntas correctas e
+            incorrectas
+          </h4>
         </div>
         <div class="card__proyect-links">
-          <a href="https://github.com/cocarls/question-js" target="_blank">
+          <a href="https://github.com/cocarls" target="_blank">
             <i class="fab fa-github"></i>
           </a>
           <a href="">
             <i class="fas fa-globe-asia"></i>
           </a>
-          <a href="">
+          <a href="https://github.com/cocarls/question-js" target="_blank">
             <i class="fas fa-code"></i>
           </a>
         </div>
         <div class="button-content">
           <button class="project-details-button download-cv">
-            <a href="#">Project Details</a>
+            <a
+              href="https://incomparable-pie-259072.netlify.app/"
+              target="_blank"
+              >Ver proyecto</a
+            >
           </button>
         </div>
       </div>
@@ -202,9 +217,9 @@
       <h5>Desarrollador Frontend</h5>
     </div>
     <div class="sotial-networks">
-      <a href=""><i class="fab fa-instagram"></i></a>
+      <!-- <a href=""><i class="fab fa-instagram"></i></a> -->
       <a href=""><i class="fab fa-linkedin"></i></a>
-      <a href=""><i class="fab fa-twitter-square"></i></a>
+      <!-- <a href=""><i class="fab fa-twitter-square"></i></a> -->
     </div>
     <h4 class="correo">carloscoronadouribe@gmail.com</h4>
   </footer>
