--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon"  href="/img/cc-removebg-preview.png" />
   <title>portfolio</title>
   <link rel="stylesheet" href="css/styles.css" />
   <link
@@ -218,7 +219,7 @@
     </div>
     <div class="sotial-networks">
       <!-- <a href=""><i class="fab fa-instagram"></i></a> -->
-      <a href=""><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/carlosccoronado/" target="_blank"><i class="fab fa-linkedin"></i></a>
       <!-- <a href=""><i class="fab fa-twitter-square"></i></a> -->
     </div>
     <h4 class="correo">carloscoronadouribe@gmail.com</h4>
