--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           y descubre el mundo de la programación a través de mis ojos!
         </p>
       </div>
-      <img src="/img/pruebaimagen-removebg-preview.png" alt="" />
+      <img src="/img/WhatsApp Image 2023-12-11 at 8.52.11 AM.jpeg" alt="" />
     </main>
   </div>
   <div id="sobre" class="about">
