--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <ul class="menu" id="menu">
           <li><a href="#" class="active">Inicio</a></li>
-          <li><a href="#sobre">Sobre mi</a></li>
+          <li><a href="#sobre">Sobre mí</a></li>
           <li><a href="#portafolio">Portfolio</a></li>
           <li><a href="#contacto">Contacto</a></li>
         </ul>
@@ -31,11 +31,13 @@
     </header>
     <main class="main">
       <div class="info-content">
-        <span class="info_content_subtitle"> desarrollador frontend</span>
-        <h1>Soy <span>Carlos</span></h1>
+        <span class="info_content_subtitle"> Desarrollador Full-Satck</span>
+        <!-- <h1>Soy <span class="typed-text">Carlos</span></h1> -->
+        <h1><span class="typed-text">Soy <span class="info-content myname">Carlos</span></span></h1>
+
 
         <p class="info_content_p">
-          ¡Hola! Soy Carlos Coronado, soy desarrollador frontend. Mi objetivo es
+          ¡Hola! Soy Carlos Coronado, soy desarrollador Full-Stack. Mi objetivo es
           crear experiencias web cautivadoras y funcionales. ¡Explora mi trabajo
           y descubre el mundo de la programación a través de mis ojos!
         </p>
@@ -49,7 +51,7 @@
       alt=""
     />
     <div class="about-info">
-      <h2>Sobre mi</h2>
+      <h2>Sobre mí</h2>
       <div class="divider"></div>
       <p>
         En mi día a día, encuentro inspiración en la diversidad que nos rodea.
@@ -66,16 +68,16 @@
   </div>
   <div class="portfolio">
     <div id="portafolio" class="portfolio-heading">
-      <h2>Portfolio</h2>
+      <h2>Portafolio</h2>
       <div class="divider"></div>
     </div>
     <!-- ajustar -->
     <div class="container">
       <div class="card">
-        <div class="rym"></div>
+        <div class="rym"><h4 class="rymhover">Use herramientas como JavaScript, React, Axios, Tailwind CSS,tuve que hacer una petición a una api, agregue una paginación para no saturar el escroll.</h4></div>
         <div class="card__title">
           <!-- <h2>Rick and Morty</h2> -->
-          <h4>Locacion de diferentes dimensiones por su respectivo Id</h4>
+          <h4>Locacion de diferentes dimensiones por su respectivo Id.</h4>
         </div>
         <div class="card__proyect-links">
           <a href="https://github.com/cocarls" target="_blank">
@@ -102,10 +104,10 @@
         </div>
       </div>
       <div class="card">
-        <div class="fp"></div>
+        <div class="fp"><h4 class="fphover">Use heramientas como JavaScript, React, Axios, Tailwind CSS, manejo de modales para la descripción de cada pokemon, paginación para no saturar scroll mas un buscador de pokemon por su respectiva categoria.</h4></div>
         <div class="card__title">
           <!-- <h2>Pokemon</h2> -->
-          <h4>filtrado de pokemons por su tipo y su respectiva descripcion</h4>
+          <h4>Filtrado de pokemons por su tipo y su respectiva descripción.</h4>
         </div>
         <div class="card__proyect-links">
           <a href="https://github.com/cocarls" target="_blank">
@@ -129,11 +131,11 @@
         </div>
       </div>
       <div class="card">
-        <div class="fd"></div>
+        <div class="fd"><h4 class="fdhover">Use heramientas como JavaScript, React, Axios, Tailwind CSS, consumi una api, cambio de modulos para el modo responsivo.</h4></div>
         <div class="card__title">
           <!-- <h2>clima</h2> -->
           <h4>
-            ver el clima de manera local mas un icono referente a dicho clima
+            Ver el clima de manera local mas un icono referente a dicho clima.
           </h4>
         </div>
         <div class="card__proyect-links">
@@ -158,12 +160,12 @@
         </div>
       </div>
       <div class="card">
-        <div class="js"></div>
+        <div class="js"><h4 class="jshover">Use heramientas como JavaScript, React, proyecto interactivo utilizando React que desafía a los usuarios con cinco preguntas aleatorias. Esta aplicación permite a los usuarios responder las preguntas y les muestra cuántas han respondido correctamente e incorrectamente. Es una experiencia sencilla pero entretenida que pone a prueba el conocimiento en una variedad de temas sobre JavaScript.</h4></div>
         <div class="card__title">
           <!-- <h2>preguntas js</h2> -->
           <h4>
-            preguntas aleatorias y un contador de preguntas correctas e
-            incorrectas
+            Preguntas aleatorias y un contador de preguntas correctas e
+            incorrectas.
           </h4>
         </div>
         <div class="card__proyect-links">
@@ -215,7 +217,7 @@
   <footer class="footer">
     <div class="footer-content">
       <h2 id="contacto">Carlos Coronado</h2>
-      <h5>Desarrollador Frontend</h5>
+      <h5>Desarrollador Full-Stack</h5>
     </div>
     <div class="sotial-networks">
       <!-- <a href=""><i class="fab fa-instagram"></i></a> -->
