--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon"  href="/img/cc-removebg-preview.png" />
+  <link rel="icon" href="/img/cc-removebg-preview.png" />
   <title>portfolio</title>
   <link rel="stylesheet" href="css/styles.css" />
   <link
@@ -33,14 +33,20 @@
       <div class="info-content">
         <span class="info_content_subtitle"> Desarrollador Full-Satck</span>
         <!-- <h1>Soy <span class="typed-text">Carlos</span></h1> -->
-        <h1><span class="typed-text">Soy <span class="info-content myname">Carlos</span></span></h1>
-
+        <h1>
+          <span class="typed-text"
+            >Soy <span class="info-content myname">Carlos</span></span
+          >
+        </h1>
 
         <p class="info_content_p">
-          ¡Hola! Soy Carlos Coronado, soy desarrollador Full-Stack. Mi objetivo es
-          crear experiencias web cautivadoras y funcionales. ¡Explora mi trabajo
-          y descubre el mundo de la programación a través de mis ojos!
+          ¡Hola! Soy Carlos Coronado, soy desarrollador Full-Stack. Mi objetivo
+          es crear experiencias web cautivadoras y funcionales. ¡Explora mi
+          trabajo y descubre el mundo de la programación a través de mis ojos!
         </p>
+        <a download href="/cv/cv-carlos-coronado.pdf">
+          <button class="download-cv">Descargar CV</button>
+        </a>
       </div>
       <img src="/img/WhatsApp Image 2023-12-11 at 8.52.11 AM.jpeg" alt="" />
     </main>
@@ -56,13 +62,12 @@
       <p>
         En mi día a día, encuentro inspiración en la diversidad que nos rodea.
         Fuera de las líneas de código, disfruto explorando nuevas formas de
-        expresión creativa. 
+        expresión creativa.
       </p>
       <p>
-        Siempre en busca de experiencias auténticas, me
-        gusta descubrir cómo la tecnología puede mejorar y enriquecer nuestras
-        vidas. Bienvenido a mi espacio digital, donde la creatividad se
-        encuentra con la simplicidad.
+        Siempre en busca de experiencias auténticas, me gusta descubrir cómo la
+        tecnología puede mejorar y enriquecer nuestras vidas. Bienvenido a mi
+        espacio digital, donde la creatividad se encuentra con la simplicidad.
       </p>
     </div>
   </div>
@@ -74,7 +79,13 @@
     <!-- ajustar -->
     <div class="container">
       <div class="card">
-        <div class="rym"><h4 class="rymhover">Use herramientas como JavaScript, React, Axios, Tailwind CSS,tuve que hacer una petición a una api, agregue una paginación para no saturar el escroll.</h4></div>
+        <div class="rym">
+          <h4 class="rymhover">
+            Use herramientas como JavaScript, React, Axios, Tailwind CSS,tuve
+            que hacer una petición a una api, agregue una paginación para no
+            saturar el escroll.
+          </h4>
+        </div>
         <div class="card__title">
           <!-- <h2>Rick and Morty</h2> -->
           <h4>Locacion de diferentes dimensiones por su respectivo Id.</h4>
@@ -104,7 +115,14 @@
         </div>
       </div>
       <div class="card">
-        <div class="fp"><h4 class="fphover">Use heramientas como JavaScript, React, Axios, Tailwind CSS, manejo de modales para la descripción de cada pokemon, paginación para no saturar scroll mas un buscador de pokemon por su respectiva categoria.</h4></div>
+        <div class="fp">
+          <h4 class="fphover">
+            Use heramientas como JavaScript, React, Axios, Tailwind CSS, manejo
+            de modales para la descripción de cada pokemon, paginación para no
+            saturar scroll mas un buscador de pokemon por su respectiva
+            categoria.
+          </h4>
+        </div>
         <div class="card__title">
           <!-- <h2>Pokemon</h2> -->
           <h4>Filtrado de pokemons por su tipo y su respectiva descripción.</h4>
@@ -131,7 +149,12 @@
         </div>
       </div>
       <div class="card">
-        <div class="fd"><h4 class="fdhover">Use heramientas como JavaScript, React, Axios, Tailwind CSS, consumi una api, cambio de modulos para el modo responsivo.</h4></div>
+        <div class="fd">
+          <h4 class="fdhover">
+            Use heramientas como JavaScript, React, Axios, Tailwind CSS, consumi
+            una api, cambio de modulos para el modo responsivo.
+          </h4>
+        </div>
         <div class="card__title">
           <!-- <h2>clima</h2> -->
           <h4>
@@ -160,7 +183,17 @@
         </div>
       </div>
       <div class="card">
-        <div class="js"><h4 class="jshover">Use heramientas como JavaScript, React, proyecto interactivo utilizando React que desafía a los usuarios con cinco preguntas aleatorias. Esta aplicación permite a los usuarios responder las preguntas y les muestra cuántas han respondido correctamente e incorrectamente. Es una experiencia sencilla pero entretenida que pone a prueba el conocimiento en una variedad de temas sobre JavaScript.</h4></div>
+        <div class="js">
+          <h4 class="jshover">
+            Use heramientas como JavaScript, React, proyecto interactivo
+            utilizando React que desafía a los usuarios con cinco preguntas
+            aleatorias. Esta aplicación permite a los usuarios responder las
+            preguntas y les muestra cuántas han respondido correctamente e
+            incorrectamente. Es una experiencia sencilla pero entretenida que
+            pone a prueba el conocimiento en una variedad de temas sobre
+            JavaScript.
+          </h4>
+        </div>
         <div class="card__title">
           <!-- <h2>preguntas js</h2> -->
           <h4>
@@ -221,7 +254,9 @@
     </div>
     <div class="sotial-networks">
       <!-- <a href=""><i class="fab fa-instagram"></i></a> -->
-      <a href="https://www.linkedin.com/in/carlosccoronado/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/carlosccoronado/" target="_blank"
+        ><i class="fab fa-linkedin"></i
+      ></a>
       <!-- <a href=""><i class="fab fa-twitter-square"></i></a> -->
     </div>
     <h4 class="correo">carloscoronadouribe@gmail.com</h4>
