--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <button class="download-cv">Descargar CV</button>
         </a>
       </div>
-      <img src="/img/WhatsApp Image 2023-12-11 at 8.52.11 AM.jpeg" alt="" />
+      <img src="/img/SAVE_20240112_161922-removebg-preview.png" alt="" />
     </main>
   </div>
   <div id="sobre" class="about">
