--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="menu" id="menu">
           <li><a href="#" class="active">Inicio</a></li>
           <li><a href="#sobre">Sobre mí</a></li>
-          <li><a href="#portafolio">Portfolio</a></li>
+          <li><a href="#portafolio">Portafolio</a></li>
           <li><a href="#contacto">Contacto</a></li>
         </ul>
         <div class="toggle_menu">
@@ -44,7 +44,7 @@
           es crear experiencias web cautivadoras y funcionales. ¡Explora mi
           trabajo y descubre el mundo de la programación a través de mis ojos!
         </p>
-        <a download href="/cv/cv-carlos-coronado.pdf">
+        <a download href="/cv/CV-carlos-coronado.pdf">
           <button class="download-cv">Descargar CV</button>
         </a>
       </div>
