--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           es crear experiencias web cautivadoras y funcionales. ¡Explora mi
           trabajo y descubre el mundo de la programación a través de mis ojos!
         </p>
-        <a download href="/cv/CV-carlos-coronado.pdf">
+        <a download href="/cv/carlos-coronado-cv.pdf">
           <button class="download-cv">Descargar CV</button>
         </a>
       </div>
