--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             
             <button type="submit" class="btn-submit mybutton">Enviar</button>
             <input type="hidden" name="_next" value="https://subtle-travesseiro-9bd545.netlify.app/">
-            <input type="hidden" name="_capcha" value="false">
+            <input type="hidden" name="_captcha" value="false">
           </form>
         </div>
       </div>
